CHORE: Added get loan btn, gui+logic

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
         <button onclick="getLoan()">Get loan</button> <br><br>
     
-        <div id="outstandingLoanDiv" style="display: none;">
+        <div id="outstandingLoanDiv" style="display: block;">
         <b>Outstanding loan</b> <b id="outstandingLoan">0</b> <b>kr</b>  <br>
         <button onclick="repayLoan()">Repay loan</button>  
         </div>
