CHORE: upd fetching func, specs will now update

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div id="StorePreview">
             <h1>Store</h1>
-            <select name="computer" id="computerListId" onchange="getSelectedComputer()"></select> <br><br>
+            <select name="computer" id="computerListId" onchange="setSelectedComputer()"></select> <br><br>
             <b id="computerFeatures">Desc</b>
     
         </div> <br><br>
