--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Komputer store</title>
+    <link rel="stylesheet" href="indexStyle.css">
 </head>
 <body>
     <div id="Bank">
@@ -16,7 +17,7 @@
     
         <div id="outstandingLoanDiv" style="display: block;">
         <b>Outstanding loan</b> <b id="outstandingLoan">0</b> <b>kr</b>  <br>
-        <button onclick="repayLoan()">Repay loan</button>  
+        <button id="loanBtn" onclick="repayLoan()">Repay loan</button>  
         </div>
     
         </div>
